Fix review findings: bugs, confidence levels, docs, and add scalability tests
Bugs fixed:
- StaticPracticeFindingAnalyzer: suppress method-level @Transactional findings
  when the class itself is already flagged, eliminating double-firing
- SecurityPracticeFindingAnalyzer: replace toString().contains("disable") with
  AST traversal to avoid CSRF false positives from variable names/comments

Rule corrections:
- ScalabilityPracticeFindingAnalyzer: lower SPRING_WEBFLUX_BLOCKING_CALL
  confidence from HIGH to MEDIUM (Thread.sleep may be intentional)
- ScalabilityPracticeFindingAnalyzer: detect .block(Duration) via size() <= 1
  instead of requiring zero arguments
- ScalabilityPracticeFindingAnalyzer: extend filter-registration-leak detection
  to @Service and @Repository, not only @Component
- ScalabilityPracticeFindingAnalyzer: detect Path.of() alongside Paths.get()
  for hardcoded absolute path rule

Documentation:
- RULES.md: remove 3 duplicate rule rows
- SpringBootProjectAnalyzer: update Javadoc to list all 9 finding analyzers

Tests:
- Add ScalabilityPracticeFindingAnalyzerTest covering all 6 rules with 14 cases